--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
-<!DOCTYPE>
-<html>
-	<head>
-     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-     </head>
-    
-	<body>
-        <div class="content">
-            <h1> Benjamin Haesemeyer</h1>
-            <h3> Professional Experience</h3>
-            <p>tgi fridays</p>
-            <p>crave</p>
-            <p>huhot</p>
-        </div>
-        </body>
+wut delivery routes and following precise instructions on where to deliver salt.</li>
+								<li>Communcating with property owners and management to ensure deliveries are completed. </li>
+								<li>Helping customers fill water softner tanks and gauging when we they will need to refill tanks.</li>
+							</ul>	
+					</div>
+				</div>
+
+
+				<div id="content-tgi">
+					<h3>TGI Friday's</h3>
+					<div class="block-date">
+							<h4>Server</h4>
+							<h4>September 2015 - December - 2017</h4>
+					</div>		
+					<div class"block-content">
+							<ul>	
+								<li>Delivered professional, friendly, fast service</li>
+								<li>Recommended exceptional menu items to new guests</li>
+								<li>Effectively communicated with kitchen staff regarding customer allergies, dietary needs, and other special requests</li>
+							</ul>	
+					</div>
+				</div>
+
+
+				<div id="content-huhot">
+					<h3>HuHot Mongolian Grill</h3>
+					<div class="block-date">
+							<h4>Server</h4>
+							<h4>January 2015 - September 2015</h4>
+					</div>		
+					<div class"block-content">
+							<ul>	
+								<li>Informed guests of HuHot’s unique build your own entrée process</li>
+								<li>Skillfully anticipated and addressed guests’ service needs
+								</li>
+								<li>Regularly checked on guests to ensure satisfaction</li>
+							</ul>
+					</div>
+
+					<div class="block-date">
+							<h4>Barista</h4>
+							<h4>September 2014 - January 2015</h4>
+					</div>		
+					<div class"block-content">
+							<ul>	
+								<li>Provided personalized customer service in a fast paced, team oriented environment</li>
+								<li>Effectively communicated with team members</li>
+                                <li>Described the difference between types of coffee, and menu items</li>
+							</ul>	
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</body>
 </html>
