--- a/index.html
+++ b/index.html
@@ -1,4 +1,38 @@
-wut delivery routes and following precise instructions on where to deliver salt.</li>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
+		<title>Prime Digital Academy Resume</title>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	</head>
+
+	<body>
+		<div id="container">
+			<div id="content-contact">
+				<h1>Benjamin Haesemeyer</h1>
+				<h2>13853 Fairlawn Avenue</h2>
+				<h2>Apple Valley, MN 55124</h2>
+				<h2>(952) 687-1497</h2>
+                <h2>benjaminhaesemeyer@gmail.com</h2>
+			</div>
+
+			<div id="content-summary">
+				<h3>About Me</h3>
+				<p>Aspiring Web Developer with a passion for problem-solving and creative solutions. </p>
+			</div>
+
+			<div id="content-professional"> Professional Experience
+				<div id="content-peterson">
+					<h3>Peterson Salt and Water Treatment</h3>
+					<div class="block-date">
+							<h4>Salt Delivery Driver</h4>
+							<h4>December 2017 - Current</h4>
+					</div>		
+					<div class"block-content">
+							<ul>	
+								<li>Operating a forklift to load salt onto trucks.</li>
+								<li>Mapping out delivery routes and following precise instructions on where to deliver salt.</li>
 								<li>Communcating with property owners and management to ensure deliveries are completed. </li>
 								<li>Helping customers fill water softner tanks and gauging when we they will need to refill tanks.</li>
 							</ul>	
