--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 		<div id="container">
 			<div id="content-contact">
 				<h1>Benjamin Haesemeyer</h1>
-				<h2>13853 Fairlawn Avenue</h2>
-				<h2>Apple Valley, MN 55124</h2>
-				<h2>(952) 687-1497</h2>
-                <h2>benjaminhaesemeyer@gmail.com</h2>
+				<h2>Address: 13853 Fairlawn Avenue, Apple Valley, MN, 55124</h2>
+				<h2>Phone: (952) 687-1497 Email: benjaminhaesemeyer@gmail.com</h2>
 			</div>
 
 			<div id="content-summary">
