--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<title>Prime Digital Academy Resume</title>
+		
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	</head>
 
 	<body>
@@ -12,7 +14,7 @@
 			<div id="content-contact">
 				<h1>Benjamin Haesemeyer</h1>
 				<h2>Address: 13853 Fairlawn Avenue, Apple Valley, MN, 55124</h2>
-				<h2>Phone: (952) 687-1497 Email: benjaminhaesemeyer@gmail.com</h2>
+				<h2><i class="fa fa-mobile" aria-hidden="true"></i>(952) 687-1497 Email: benjaminhaesemeyer@gmail.com</h2>
 			</div>
 
 			<div id="content-summary">
