--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	</head>
 
 	<body>
-		<i class="fa fa-mobile" aria-hidden="true" style="font-size: 50px"></i>
 		<div id="container">
 			<div id="content-contact">
 				<h1>Benjamin Haesemeyer</h1>
 				<h2>Address: 13853 Fairlawn Avenue, Apple Valley, MN, 55124</h2>
 				<h2>(952) 687-1497 Email: benjaminhaesemeyer@gmail.com</h2>
+				<i class="fa fa-mobile" aria-hidden="true"></i>
 			</div>
 
 			<div id="content-summary">
