--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+	<script src="https://use.fontawesome.com/d72e65b0da.js"></script>
 	<head>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<title>Prime Digital Academy Resume</title>
 		
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
-		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	</head>
 
 	<body>
