--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 			<div id="content-contact">
 				<h1>Benjamin Haesemeyer</h1>
 				<h2>Address: 13853 Fairlawn Avenue, Apple Valley, MN, 55124</h2>
-				<h2>(952) 687-1497 Email: benjaminhaesemeyer@gmail.com</h2>
-				<i class="fa fa-mobile" aria-hidden="true"></i>
+				<h2> <i class="fa fa-phone" aria-hidden="true"></i>(952) 687-1497 Email: benjaminhaesemeyer@gmail.com</h2>
 			</div>
 
 			<div id="content-summary">
