--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 		<div id="container">
 			<div id="content-contact">
 				<h1>Benjamin Haesemeyer</h1>
-				<h2>Address: 13853 Fairlawn Avenue, Apple Valley, MN, 55124</h2>
-				<h2> <i class="fa fa-phone" aria-hidden="true"></i>(952) 687-1497 Email: benjaminhaesemeyer@gmail.com</h2>
+				<h2> <i class="fa fa-address-book-o" aria-hidden="true"></i> 13853 Fairlawn Avenue, Apple Valley, MN, 55124</h2>
+				<h2> <i class="fa fa-phone" aria-hidden="true"></i> (952) 687-1497</h2>
+				<h2> <i class="fa fa-envelope" aria-hidden="true"></i> benjaminhaesemeyer@gmail.com</h2>
 			</div>
 
 			<div id="content-summary">
