--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 				<h2> <i class="fa fa-envelope" aria-hidden="true" style="font-size: 27px"></i> benjaminhaesemeyer@gmail.com</h2>
 			</div>
 
-			<div id="content-summary">
-				<h3>About Me</h3>
+			<div id="content-professional"> About Me
 				<p>Aspiring Web Developer with a passion for problem-solving and creative solutions. </p>
 			</div>
 
