--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</div>
 
 			<div id="content-professional"> About Me
-				<p>Aspiring Web Developer with a passion for problem-solving and creative solutions. </p>
+				<h2>Aspiring Web Developer with a passion for problem-solving and creative solutions. </h2>
 			</div>
 
 			<div id="content-professional"> Professional Experience
