--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 				<h2> <i class="fa fa-envelope" aria-hidden="true" style="font-size: 27px"></i> benjaminhaesemeyer@gmail.com</h2>
 			</div>
 
-			<div id="content-professional"> About Me
-				<h2>Aspiring Web Developer with a passion for problem-solving and creative solutions. </h2>
+			<div id="content-Me"> About Me
+				<h2>Asipiring web devloper and designer with a background in Graphic Design and Photography. 
+					Outgoing guy who enjoys problem solving, sharing creative ideas, and collaborting with like-minded individuals. When i'm not behind a computer, i'm exploring the great outdoors. </h2>
 			</div>
 
-			<div id="content-professional"> Professional Experience
+			<div id="content-professional"> Professional Work Experience
 				<div id="content-peterson">
 					<h3>Peterson Salt and Water Treatment</h3>
 					<div class="block-date">
@@ -38,7 +39,6 @@
 							</ul>	
 					</div>
 				</div>
-
 
 				<div id="content-tgi">
 					<h3>TGI Friday's</h3>
