--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h2> <i class="fa fa-envelope" aria-hidden="true" style="font-size: 27px"></i> benjaminhaesemeyer@gmail.com</h2>
 			</div>
 
-			<div id="content-Me"> About Me
+			<div id="content-me"> About Me
 				<h2>Asipiring web devloper and designer with a background in Graphic Design and Photography. 
 					Outgoing guy who enjoys problem solving, sharing creative ideas, and collaborting with like-minded individuals. When i'm not behind a computer, i'm exploring the great outdoors. </h2>
 			</div>
