--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 			<div id="content-me"> About Me
 				<h2>Asipiring web devloper and designer with a background in Graphic Design and Photography. 
-					Outgoing guy who enjoys problem solving, sharing creative ideas, and collaborting with like-minded individuals. When i'm not behind a computer, i'm exploring the great outdoors. </h2>
+					Outgoing guy who enjoys problem solving, sharing creative ideas, and collaborting with like-minded individuals. When i'm not behind a computer, i'm exploring nature. </h2>
 			</div>
 
 			<div id="content-professional"> Professional Work Experience
