--- a/index.html
+++ b/index.html
@@ -1,78 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-	<script src="https://use.fontawesome.com/d72e65b0da.js"></script>
-	<head>
-		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-		<meta content="utf-8" http-equiv="encoding">
-		<title>Prime Digital Academy Resume</title>
-		
-		<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	</head>
+<script src="https://use.fontawesome.com/d72e65b0da.js"></script>
 
-	<body>
-		<div id="container">
-			<div id="content-contact">
-				<h1>Benjamin Haesemeyer</h1>
-				<h2> <i class="fa fa-home" aria-hidden="true" style="font-size: 30px"></i> 13853 Fairlawn Avenue, Apple Valley, MN, 55124</h2>
-				<h2> <i class="fa fa-phone" aria-hidden="true" style="font-size: 30px"></i> 952-687-1497</h2>
-				<h2> <i class="fa fa-envelope" aria-hidden="true" style="font-size: 27px"></i> benjaminhaesemeyer@gmail.com</h2>
-			</div>
+<head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
+    <title>Prime Digital Academy Resume</title>
 
-			<div id="content-me"> About Me
-				<h2>Asipiring web devloper and designer with a background in Graphic Design and Photography. 
-					Outgoing guy who enjoys problem solving, sharing creative ideas, and collaborting with like-minded individuals. When i'm not behind a computer, i'm exploring nature. </h2>
-			</div>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+</head>
 
-			<div id="content-professional"> Professional Work Experience
-				<div id="content-peterson">
-					<h3>Peterson Salt and Water Treatment</h3>
-					<div class="block-date">
-							<h4>Salt Delivery Driver</h4>
-							<h4>December 2017 - Current</h4>
-					</div>		
-					<div class"block-content">
-							<ul>	
-								<li>Operating a forklift to load salt onto trucks.</li>
-								<li>Mapping out delivery routes and following precise instructions on where to deliver salt.</li>
-								<li>Communcating with property owners and management to ensure deliveries are completed. </li>
-								<li>Helping customers fill water softner tanks and gauging when we they will need to refill tanks.</li>
-							</ul>	
-					</div>
-				</div>
+<body>
+    <div id="container">
+        <div id="content-contact">
+            <h1>Benjamin Haesemeyer</h1>
+            <h2> <i class="fa fa-home" aria-hidden="true" style="font-size: 30px"></i> 13853 Fairlawn Avenue, Apple Valley, MN, 55124</h2>
+            <h2> <i class="fa fa-phone" aria-hidden="true" style="font-size: 30px"></i> 952-687-1497</h2>
+            <h2> <i class="fa fa-envelope" aria-hidden="true" style="font-size: 27px"></i> benjaminhaesemeyer@gmail.com</h2>
+        </div>
 
-				<div id="content-tgi">
-					<h3>TGI Friday's</h3>
-					<div class="block-date">
-							<h4>Server</h4>
-							<h4>September 2015 - December - 2017</h4>
-					</div>		
-					<div class"block-content">
-							<ul>	
-								<li>Delivered professional, friendly, fast service</li>
-								<li>Recommended exceptional menu items to new guests</li>
-								<li>Effectively communicated with kitchen staff regarding customer allergies, dietary needs, and other special requests</li>
-							</ul>	
-					</div>
-				</div>
+        <div id="content-me"> About Me
+            <h2>Asipiring web devloper and designer with a background in Graphic Design and Photography. 
+		Outgoing guy who enjoys problem solving,sharing creative ideas, and collaborting with like-minded individuals. 
+		    When i'm not behind a computer, i'm exploring nature. </h2>
+        </div>
+
+        <div id="content-professional"> Professional Work Experience
+            <div id="content-peterson">
+                <h3>Peterson Salt and Water Treatment</h3>
+                <div class="block-date">
+                    <h4>Salt Delivery Driver</h4>
+                    <h4>December 2017 - Current</h4>
+                </div>
+                <div class "block-content">
+                    <ul>
+                        <li>Operating a forklift to load salt onto trucks.</li>
+                        <li>Mapping out delivery routes and following precise instructions on where to deliver salt.</li>
+                        <li>Communcating with property owners and management to ensure deliveries are completed. </li>
+                        <li>Helping customers fill water softner tanks and gauging when we they will need to refill tanks.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="content-tgi">
+                <h3>TGI Friday's</h3>
+                <div class="block-date">
+                    <h4>Server</h4>
+                    <h4>September 2015 - December - 2017</h4>
+                </div>
+                <div class "block-content">
+                    <ul>
+                        <li>Delivered professional, friendly, fast service</li>
+                        <li>Recommended exceptional menu items to new guests</li>
+                        <li>Effectively communicated with kitchen staff regarding customer allergies, dietary needs, and other special requests</li>
+                    </ul>
+                </div>
+            </div>
 
 
-				<div id="content-huhot">
-					<h3>HuHot Mongolian Grill</h3>
-					<div class="block-date">
-							<h4>Server</h4>
-							<h4>January 2015 - September 2015</h4>
-					</div>		
-					<div class"block-content">
-							<ul>	
-								<li>Informed guests of HuHot’s unique build your own entrée process</li>
-								<li>Skillfully anticipated and addressed guests’ service needs
-								</li>
-								<li>Regularly checked on guests to ensure satisfaction</li>
-							</ul>
-					</div>
-				</div>
-			</div>
-		</div>
+            <div id="content-huhot">
+                <h3>HuHot Mongolian Grill</h3>
+                <div class="block-date">
+                    <h4>Server</h4>
+                    <h4>January 2015 - September 2015</h4>
+                </div>
+                <div class "block-content">
+                    <ul>
+                        <li>Informed guests of HuHot’s unique build your own entrée process</li>
+                        <li>Skillfully anticipated and addressed guests’ service needs
+                        </li>
+                        <li>Regularly checked on guests to ensure satisfaction</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
-	</body>
+</body>
+
 </html>
